🔧 chore(pmd): WebSocket 패키지 PMD 위반 0건 수정
## SPEC Reference
SPEC: SPEC-COLLECTOR-WS-001
Phase: SYNC

## Context (AI-Developer Memory)
- Pattern: @SuppressWarnings 사용 — AvoidCatchingGenericException(WebSocket/JWT 불가피), AvoidUsingVolatile(멀티스레드 필드), GodClass(KisTokenService 도메인 서비스)
- Pattern: 실제 코드 개선 — @FunctionalInterface 추가, 리터럴 상수화(TYPE_A_SPLIT_LIMIT 등), get(0)→getFirst() Java 21 API, 선언 분리
- Constraint: pmdMain 29건 + pmdTest 28건 → 0건으로 정리 (pre-push 훅 통과 목적)

## Affected Areas
- Main: KisTokenService, DomesticSymbolProvider, KisWebSocketMessageHandler, KisWebSocketSession, KisWebSocketSessionManager
- Test: KisTokenServiceTest, KisAesDecryptorTest, KisWebSocketMessageHandlerTest, KisWebSocketSessionManagerIncrementalTest, KisWebSocketSessionManagerTest, KisWebSocketSessionTest

🗿 MoAI <email@mo.ai.kr>